Add connection properties and fix "Sleep" connection

--- a/CODE/bum/src/main/resources/application.properties
+++ b/CODE/bum/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+spring.config.import=optional:file:.env[.properties]
 spring.application.name=bum
+
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/${DB_NAME}?connectTimeout=${DB_CONNECT_TIMEOUT:4000}&socketTimeout=${DB_SOCKET_TIMEOUT:60000}&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# HikariCP: giới hạn và thu hồi kết nối nhàn rỗi để tránh "Sleep" kéo dài
+spring.datasource.hikari.pool-name=HikariPool
+spring.datasource.hikari.maximum-pool-size=20
+# điều chỉnh theo tải thực tế
+spring.datasource.hikari.minimum-idle=2
+# giữ ít kết nối idle
+spring.datasource.hikari.idle-timeout=30000
+# 30s thu hồi idle
+spring.datasource.hikari.max-lifetime=1800000
+# 30m, nhỏ hơn MySQL wait_timeout
+spring.datasource.hikari.connection-timeout=10000
+# 10s timeout lấy kết nối
+spring.datasource.hikari.keepalive-time=300000
+# 5m keepalive nhẹ
+spring.datasource.hikari.leak-detection-threshold=20000
+# phát hiện rò rỉ kết nối
+
+# JPA/Hibernate: không giữ kết nối qua tầng view
+spring.jpa.open-in-view=false
+
+# Tùy chọn: giảm cảnh báo dialect (có thể bỏ nếu để auto)
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
