Edit entity users and demo entity product. Add thymeleaf to properties

--- a/CODE/bum/src/main/resources/application.properties
+++ b/CODE/bum/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# HikariCP: giới hạn và thu hồi kết nối nhàn rỗi để tránh "Sleep" kéo dài
+spring.jpa.hibernate.ddl-auto=update
+
 spring.datasource.hikari.pool-name=HikariPool
 spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.hikari.minimum-idle=2
