Add new interface repository and demo home page show demo information

--- a/CODE/bum/src/main/resources/application.properties
+++ b/CODE/bum/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.config.import=optional:file:.env[.properties]
 spring.application.name=bum
 
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/${DB_NAME}?connectTimeout=${DB_CONNECT_TIMEOUT:4000}&socketTimeout=${DB_SOCKET_TIMEOUT:60000}&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+# S?a l?i k?t n?i DB: Thêm giá tr? m?c ??nh cho các bi?n môi tr??ng
+# Hãy thay ??i các giá tr? này cho phù h?p v?i c?u hình MySQL c?a b?n
+spring.datasource.url=jdbc:mysql://${DB_HOST:smiledev.id.vn}:3306/${DB_NAME:smiledev_2004}?connectTimeout=${DB_CONNECT_TIMEOUT:4000}&socketTimeout=${DB_SOCKET_TIMEOUT:60000}&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=${DB_USERNAME:smiledev_2004}
+spring.datasource.password=${DB_PASSWORD:Longdeptrai99}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
