--- a/CODE/bum/src/main/resources/application.properties
+++ b/CODE/bum/src/main/resources/application.properties
@@ -8,7 +8,9 @@ spring.datasource.username=${DB_USERNAME:smiledev_2004}
 spring.datasource.password=${DB_PASSWORD:Longdeptrai99}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=validate
+
 
 spring.datasource.hikari.pool-name=HikariPool
 spring.datasource.hikari.maximum-pool-size=2
