Implement VNPAY payment integration with configuration and transaction handling

--- a/CODE/bum/src/main/resources/application.properties
+++ b/CODE/bum/src/main/resources/application.properties
@@ -17,3 +17,11 @@ spring.datasource.hikari.keepalive-time=300000
 spring.datasource.hikari.leak-detection-threshold=20000
 spring.jpa.open-in-view=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# VNPAY Configuration
+vnp.payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnp.returnUrl=http://localhost:8080/api/v1/transactions/vnpay-return
+vnp.tmnCode=YOUR_TMN_CODE
+vnp.hashSecret=YOUR_HASH_SECRET
+vnp.apiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+vnp.version=2.1.0
