--- a/CODE/bum/src/main/resources/application.properties
+++ b/CODE/bum/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # VNPAY Configuration
 vnp.payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 vnp.returnUrl=http://localhost:8080/api/v1/transactions/vnpay-return
-vnp.tmnCode=YOUR_TMN_CODE
-vnp.hashSecret=YOUR_HASH_SECRET
+vnp.tmnCode=S5FSJX1Y
+vnp.hashSecret=QV4ZV83F5F9HHXZXZHSL66LG7W86LJ5E
 vnp.apiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
 vnp.version=2.1.0
