Add CreateProductRequest DTO: Include fields for product details, versioning, and package information.

--- a/CODE/bum/src/main/resources/application.properties
+++ b/CODE/bum/src/main/resources/application.properties
@@ -25,3 +25,9 @@ vnp.tmnCode=S5FSJX1Y
 vnp.hashSecret=OMKFYSJDE5I17FBZD3FV8YVJ2E1PXKKV
 vnp.apiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
 vnp.version=2.1.0
+
+# File Upload Configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+app.upload.dir=uploads/products
