Refactor code structure for improved readability and maintainability

--- a/CODE/bum/src/main/resources/application.properties
+++ b/CODE/bum/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=${DB_USERNAME:smiledev_2004}
 spring.datasource.password=${DB_PASSWORD:Longdeptrai99}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.hikari.pool-name=HikariPool
 spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.hikari.minimum-idle=2
